syntax = "proto3";

package com.udit.grpc;

option java_multiple_files = true;
option java_package = "com.udit.gen.proto";


// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string reply = 1;
}

service UserDetailsService {
  rpc generateRandomUser(UserDetailsRequest) returns (UserDetailsResponse) {};
  rpc generateRandomUserStream(stream UserDetailsRequest) returns (stream UserDetailsResponse) {};
}

message UserDetailsRequest {
  string firstName = 1;
  string lastName = 2;
  string city = 3;
}

message UserDetailsResponse {
  string id = 1;
  int32 numericId = 2;
  string firstName = 3;
  string lastName = 4;
  string city = 5;
}
